Fix category tile outline visiblity

--- a/src/style.css
+++ b/src/style.css
@@ -582,6 +582,7 @@ headerbar,
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
   padding-left: 32px;
   padding-right: 32px;
+  outline-offset: 2px;
 }
 
 @media (prefers-contrast: more) {
